--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "13.4.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "recharts": "^2.6.2"
   }
 }
